syntax = "proto3";

package zksync.config;

enum BasicWitnessGeneratorDataSource {
  FROM_POSTGRES = 0;
  FROM_POSTGRES_SHADOW_BLOB = 1;
  FROM_BLOB = 2;
}

message WitnessGenerator {
  optional uint32 generation_timeout_in_secs = 1; // required; s
  optional string initial_setup_key_path = 2; // required; fs path
  optional string key_download_url = 3; // required; url
  optional uint32 max_attempts = 4; // required
  optional uint32 blocks_proving_percentage = 5; // optional; 0-100 (percentage)
  repeated uint32 dump_arguments_for_blocks = 6;
  optional uint32 last_l1_batch_to_process = 7; // optional
  optional BasicWitnessGeneratorDataSource data_source = 8; // required
}
